kubernetes/apps/database/dragonfly/cluster/networkpolicy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/networking.k8s.io/networkpolicy_v1.json
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dragonfly-metrics
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: observability
          podSelector:
            matchLabels:
              app.kubernetes.io/name: vmagent
      ports:
        - port: 9999
          protocol: TCP
  podSelector:
    matchLabels:
      app: dragonfly
  policyTypes:
    - Ingress
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/networking.k8s.io/networkpolicy_v1.json
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dragonfly-clients
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cortex
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: default
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: forgejo
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: media
      ports:
        - port: 6379
          protocol: TCP
  podSelector:
    matchLabels:
      app: dragonfly
  policyTypes:
    - Ingress
